--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,8 @@ langchain-openai>=0.3.0
 langchain-pinecone>=0.2.0
 langchain-community>=0.3.0
 pypdf2==3.0.1
+pypdf>=6.0.0
 streamlit==1.31.0
+pandas>=2.0.0
+plotly>=5.0.0
 
